Revert overflow change due to drop menu issue

--- a/Survey/source/styles/_t-question-base.scss
+++ b/Survey/source/styles/_t-question-base.scss
@@ -3,7 +3,6 @@
 .o-question-container {
     padding: 1em;
     position: relative;
-    overflow-x: auto;
 }
 
 .focus-question .o-question-container.focused {
