--- a/Survey/styles/base.css
+++ b/Survey/styles/base.css
@@ -1892,7 +1892,6 @@ input[type=range]:focus::-ms-fill-lower {
 .o-question-container {
   padding: 1em;
   position: relative;
-  overflow-x: auto;
 }
 
 .focus-question .o-question-container.focused {
